--- a/index.html
+++ b/index.html
@@ -2,16 +2,24 @@
 <html lang="en">
 <head>
     <title> After School Club </title>
+    <!-- Import Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.16/dist/vue.js"></script>
+    <!-- Import Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <!-- Link to CSS file -->
     <link rel="stylesheet" href="styles.css">
+    <!-- Link to lesson data -->
     <script src="lesson.js"></script>
 </head>
 <body>
+    <!-- Vue app container -->
     <div id="app">
+        <!-- Header section -->
         <header>
             <div class="header-left">
+                <!-- Sitename -->
                 <h1 v-text="sitename"></h1>
+                <!-- Cart button showing number of lessns in cart -->
                 <button v-on:click="showCheckout" v-bind:disabled="isCartEmpty">
                     {{cartItemCount}}
                     <span class="fas fa-cart-plus"></span>
@@ -19,8 +27,12 @@
                 </button>
             </div>
         </header>
+
+        <!-- Main content section -->
         <main>
+            <!-- Filter and Sort options -->
             <div class="filter-sort-container" v-if="showLesson">
+                <!-- Filter section -->
                 <div class="filter-section">
                     <label><strong> Filter by: </strong></label>
                     <div class="filter-options">
@@ -31,29 +43,38 @@
                         <label><input type="radio" value="availableSeats" v-model="filterType"> Availability </label>
                     </div>
                 </div>
+                <!-- Sort section -->
                 <div class="sort-section">
-                    <label><strong> Sort by price: </strong></label>
+                    <label><strong> Sort by: </strong></label>
                     <div class="sort-options">
                         <label><input type="radio" value="ascending" v-model="sortOrder"> Ascending </label>
                         <label><input type="radio" value="descending" v-model="sortOrder"> Descending </label>
                     </div>
                 </div>
             </div>
+
+            <!-- Lesson cards -->
             <div v-if="showLesson" class="lesson-container">
                 <div v-for="lesson in sortedLessons" class="lesson-box">
                     <figure>
+                        <!-- Lesson icon -->
                         <img v-bind:src="lesson.Icon" width="150" height="150">
                     </figure>
+                    <!-- Lesson details -->
                     <h2 v-text="lesson.Subject"></h2>
                     <p> Location: {{lesson.Location}} </p>
                     <p> Price: {{lesson.Price}} </p>
                     <p> Available seats: {{lesson.availableSeats - cartCount(lesson.id)}} </p>
+
+                    <!-- Add to cart button -->
                     <button v-on:click="addToCart(lesson)" v-if="canAddToCart(lesson)">
                         Add to Cart
                     </button>
                     <button disabled v-else>
                         Add to Cart
                     </button>
+
+                    <!-- Update messages based on seat availability -->
                     <div class="update-messages">
                         <span v-if="lesson.availableSeats == cartCount(lesson.id)">
                             All Full!
@@ -67,7 +88,10 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Checkout section -->
             <div v-else>
+                <!-- Cart lesson preview -->
                 <div class="checkout-lesson-container">
                     <div v-for="lesson in cartLessons" class="lesson-box">
                         <figure>
@@ -77,12 +101,16 @@
                         <p>Location: {{lesson.Location}}</p>
                         <p>Price: {{lesson.Price}}</p>
                         <p>Seats Booked: {{cartCount(lesson.id)}}</p>
+                        <!-- Remove from cart button -->
                         <button v-on:click="removeFromCart(lesson)">
                             Remove from Cart
                         </button>
                     </div>
                 </div>
+
+                <!-- Checkout form and order info -->
                 <div class="checkout-container">
+                    <!-- Checkout form -->
                     <div class="checkout-details">
                         <h2> Checkout </h2>
                         <p>
@@ -98,6 +126,8 @@
                             <input v-model.trim="order.email" />
                         </p>
                     </div>
+
+                    <!-- Order information display -->
                     <div class="order-info">
                         <h2> Order Information </h2>
                         <p> Full name: {{order.fullName}} </p>
@@ -105,6 +135,8 @@
                         <p> Email: {{order.email}} </p>
                     </div>
                 </div>
+
+                <!-- Checkout button -->
                 <div class="checkout-button-container">
                     <button v-on:click="submitForm" v-bind:disabled="isCheckoutDisabled">
                         Checkout
@@ -113,16 +145,25 @@
             </div>
         </main>
     </div>
+
+    <!-- Vue.js app script -->
     <script type="text/javascript">
         var webstore = new Vue({
             el: "#app",
             data:{
+                // Sitename
                 sitename: "After School Club",
+                // Array of lessons loaded from lesson.js
                 lessons: lesson,
+                // Array to hold lesson IDs added to cart
                 cart: [],
+                // Toggle between lesson and checkout
                 showLesson: true,
+                // Selected filter type
                 filterType: "",
+                // Sort order
                 sortOrder: "ascending",
+                // Customer order info
                 order:{
                     fullName: "",
                     phoneNumber: "",
@@ -130,19 +171,24 @@
                 }
             },
             methods:{
+                // Add lesson to cart
                 addToCart(lesson){
                     if (lesson.availableSeats > this.cartCount(lesson.id))
                         this.cart.push(lesson.id);
                 },
+                // Toggle between lesson and checkout view
                 showCheckout(){
                     this.showLesson = this.showLesson ? false : true;
                 },
+                // Handle checkout submission
                 submitForm(){
                     alert("Registration successful!");
                 },
+                // Check if lesson can be added to cart
                 canAddToCart(lesson){
                     return lesson.availableSeats>this.cartCount(lesson.id);
                 },
+                // Count number of a specific lesson in cart
                 cartCount(id){
                     let count = 0;
                     for(let i = 0; i < this.cart.length; i++){
@@ -151,6 +197,7 @@
                     }
                     return count;
                 },
+                // Remove a lesson from cart
                 removeFromCart(lesson){
                     const index = this.cart.indexOf(lesson.id);
                     if (index !== -1)
@@ -158,46 +205,92 @@
                 }
             },
             computed: {
+                // Return number of items in cart
                 cartItemCount:function(){
                     return this.cart.length || "";
                 },
-                sortedLessons() {
-                    let list = this.lessons.slice();
-                    if (this.filterType === "Subject") {
-                        list = list.filter(function(item) {
-                            return item.Subject.includes("Music");
-                        });
-                    } 
-                    else if (this.filterType === "Location") {
-                        list = list.filter(function(item) {
-                            return item.Location.includes("Dubai");
-                        });
-                    } 
-                    else if (this.filterType === "Price") {
-                        list = list.filter(function(item) {
-                            return item.Price < 50;
-                        });
-                    } 
-                    else if (this.filterType === "availableSeats") {
-                        list = list.filter(function(item) {
-                            return (item.availableSeats - this.cartCount(item.id)) > 0;
-                        }.bind(this));
+                // Return lessons sorted based on filter and sort order
+                sortedLessons(){
+                    let list = this.lessons;
+                    if (this.filterType == "Subject"){
+                        if (this.sortOrder == "ascending"){
+                            list.sort(function(a, b){
+                                if (a.Subject > b.Subject)
+                                    return 1;
+                                if (a.Subject < b.Subject) 
+                                    return -1;
+                                return 0;
+                            });
+                        }
+                        else{
+                            list.sort(function(a, b){
+                                if (a.Subject < b.Subject)
+                                    return 1;
+                                if (a.Subject > b.Subject)
+                                    return -1;
+                                return 0;
+                            });
+                        }
                     }
-                    if (this.sortOrder === "ascending") {
-                        list.sort(function(a, b) {
-                            return a.Price - b.Price;
-                        });
-                    } 
-                    else if (this.sortOrder === "descending") {
-                        list.sort(function(a, b) {
-                            return b.Price - a.Price;
-                        });
+                    else if (this.filterType == "Location"){
+                        if (this.sortOrder == "ascending"){
+                            list.sort(function(a, b){
+                                if (a.Location > b.Location)
+                                    return 1;
+                                if (a.Location < b.Location)
+                                    return -1;
+                                return 0;
+                            });
+                        }
+                        else{
+                            list.sort(function(a, b){
+                                if (a.Location < b.Location)
+                                    return 1;
+                                if (a.Location > b.Location)
+                                    return -1;
+                                return 0;
+                            });
+                        }
+                    }
+                    else if (this.filterType == "Price"){
+                        if (this.sortOrder == "ascending"){
+                            list.sort(function(a, b){
+                                return a.Price - b.Price;
+                            });
+                        }
+                        else{
+                            list.sort(function(a, b){
+                                return b.Price - a.Price;
+                            });
+                        }
+                    }
+                    else if (this.filterType == "availableSeats"){
+                        if (this.sortOrder == "ascending"){
+                            list.sort(function(a, b){
+                                if (a.availableSeats > b.availableSeats)
+                                    return 1;
+                                else if (a.availableSeats < b.availableSeats)
+                                    return -1;
+                                return 0;
+                            });
+                        }
+                        else{
+                            list.sort(function(a, b){
+                                if (a.availableSeats < b.availableSeats)
+                                    return 1;
+                                else if (a.availableSeats > b.availableSeats)
+                                    return -1;
+                                return 0;
+                            });
+                        }
                     }
                     return list;
                 },
+                // Check if cart is empty
                 isCartEmpty(){
                     return this.cart.length === 0;
                 },
+                // Disable checkout button if form invalid
                 isCheckoutDisabled(){
                     let name = this.order.fullName.trim();
                     let phone = this.order.phoneNumber.trim();
@@ -215,6 +308,7 @@
                         return true;
                     return false;
                 },
+                // Return array of lessons currently in the cart
                 cartLessons() {
                     let lessonsInCart = [];
                     for (let i = 0; i < this.lessons.length; i++){
